// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

import "google/protobuf/wrappers.proto";

option go_package = "github.com/kotokaze/ent-grpc-example/ent/proto/entpb";

message Category {
  int32 id = 1;

  string name = 2;

  User admin = 3;
}

message User {
  int32 id = 1;

  string name = 2;

  string email_address = 3;

  google.protobuf.StringValue alias = 4;

  repeated Category administered = 5;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  int32 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );
}
